--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,12 +8,15 @@
             <div class="mt-10 flex items-center justify-center gap-x-6">
                 <a routerLink="/reserve"
                     class="no-underline rounded-md px-3 py-3 text-medium font-medium bg-red-500 hover:bg-red-700 text-white hover:text-grey-200 visited:text-white hover:cursor-pointer">Reserve
-                    a count</a>
+                    a court</a>
                 <a (click)="scrollToAbout()"
                     class="text-sm font-semibold leading-6 text-white hover:text-gray-200 visited:text-white hover:cursor-pointer">Learn
                     more
                     <span aria-hidden="true">→</span></a>
             </div>
+
+            <!-- <h1 class="text-4xl md:text-7xl font-bold mb-4 mt-28">13</h1>
+            <p class="text-lg md:text-2xl mb-8">Dedicated professional grade pickle courts, open all year round.</p> -->
             <div class="py-5 mt-14">
                 <div class="mx-auto max-w-7xl px-6 lg:px-8">
                     <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
