--- a/src/app/memberships/memberships.component.html
+++ b/src/app/memberships/memberships.component.html
@@ -1,206 +1,212 @@
-<h1 class=" text-5xl text-center my-16 font-header">Rates & Memberships</h1>
 <!-- Rates -->
-<article class="bg-striped px-10 pt-5 pb-10 mb-10 shadow-xl">
-    <h2 class="text-4xl font-header mb-5 flex max-md:flex-col">
-        Rates&nbsp;
-        <em class="text-gray-400 text-3xl max-md:text-lg">
-            (Membership required)
-        </em>
-    </h2>
-    <!-- Open play -->
-    <h3 class="text-2xl text-center font-header mb-5">Open play</h3>
-    <section class="grid grid-cols-2 max-md:grid-cols-1 gap-5 text-center">
-        <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5 flex flex-col">
-            <strong class="text-sky-600">Monday-Friday</strong>
-            <p class="flex justify-center">
-                <span class="text-3xl">$7/$8/$9</span>
-                <span class="self-end">/hour</span>
-            </p>
-            <p class="text-xl">determined by membership</p>
-            <p>8AM-11AM</p>
-        </div>
+<div id="rates" class="container mx-auto px-2 sm:px-6 lg:px-8">
+    <article class="mt-36 bg-striped px-10 pt-5 pb-10 mb-10 shadow-xl">
+        <h2 class="text-4xl font-header mb-5 flex max-md:flex-col">
+            Rates&nbsp;
+            <em class="text-gray-400 text-3xl max-md:text-lg">
+                (Membership required)
+            </em>
+        </h2>
+        <!-- Open play -->
+        <h3 class="text-2xl text-center font-header mb-5">Open play</h3>
+        <section class="grid grid-cols-2 max-md:grid-cols-1 gap-5 text-center">
+            <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5 flex flex-col">
+                <strong class="text-sky-600">Monday-Friday</strong>
+                <p class="flex justify-center">
+                    <span class="text-3xl">$7/$8/$9</span>
+                    <span class="self-end">/hour</span>
+                </p>
+                <p class="text-xl">determined by membership</p>
+                <p>8AM-11AM</p>
+            </div>
 
-        <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
-            <strong class="text-sky-600">Friday, Saturday, Sunday</strong>
-            <p class="flex justify-center">
-                <span class="text-3xl">$7/$8/$9</span>
-                <span class="self-end">/hour</span>
-            </p>
-            <p class="text-xl">determined by membership</p>
-            <p>8PM-11PM</p>
-        </div>
-    </section>
+            <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
+                <strong class="text-sky-600">Friday, Saturday, Sunday</strong>
+                <p class="flex justify-center">
+                    <span class="text-3xl">$7/$8/$9</span>
+                    <span class="self-end">/hour</span>
+                </p>
+                <p class="text-xl">determined by membership</p>
+                <p>8PM-11PM</p>
+            </div>
+        </section>
 
-    <!-- Court reservations desktop -->
-    <h3 class="text-2xl text-center font-header mb-5 mt-10">Court reservations</h3>
-    <section class="grid grid-cols-3 max-md:grid-cols-1 gap-5 text-center">
-        <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
-            <strong class="text-sky-600">Monday-Friday</strong>
-            <p class="flex justify-center">
-                <span class="text-3xl">$16</span>
-                <span class="self-end">/hour</span>
-            </p>
-            <p>6AM-4PM</p>
-        </div>
+        <!-- Court reservations desktop -->
+        <h3 class="text-2xl text-center font-header mb-5 mt-10">Court reservations</h3>
+        <section class="grid grid-cols-3 max-md:grid-cols-1 gap-5 text-center">
+            <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
+                <strong class="text-sky-600">Monday-Friday</strong>
+                <p class="flex justify-center">
+                    <span class="text-3xl">$16</span>
+                    <span class="self-end">/hour</span>
+                </p>
+                <p>6AM-4PM</p>
+            </div>
 
-        <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
-            <strong class="text-sky-600">Monday-Friday (Evenings)</strong>
-            <p class="flex justify-center">
-                <span class="text-3xl">$22</span>
-                <span class="self-end">/hour</span>
-            </p>
-            <p>4PM-12AM</p>
-        </div>
+            <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
+                <strong class="text-sky-600">Monday-Friday (Evenings)</strong>
+                <p class="flex justify-center">
+                    <span class="text-3xl">$22</span>
+                    <span class="self-end">/hour</span>
+                </p>
+                <p>4PM-12AM</p>
+            </div>
 
-        <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
-            <strong class="text-sky-600">Saturday/Sunday</strong>
-            <p class="flex justify-center">
-                <span class="text-3xl">$28</span>
-                <span class="self-end">/hour</span>
-            </p>
-            <p>6AM-12AM</p>
-        </div>
-    </section>
-</article>
-
+            <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
+                <strong class="text-sky-600">Saturday/Sunday</strong>
+                <p class="flex justify-center">
+                    <span class="text-3xl">$28</span>
+                    <span class="self-end">/hour</span>
+                </p>
+                <p>6AM-12AM</p>
+            </div>
+        </section>
+    </article>
+</div>
 
 <!-- Memberships -->
-<article class="grid grid-cols-4 gap-y-5 mb-10 max-lg:hidden">
-    <h2 class="col-span-4 flex text-4xl font-header">Annual Memberships</h2>
-    <table class="col-span-3 border-separate border-spacing-2">
-        <!-- Headers -->
-        <thead>
-            <tr>
-                <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Membership tier</th>
-                <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Price/year</th>
-                <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Open play/hour</th>
-                <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Court booking</th>
-                <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">
-                    Early tournament and special event access
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Limited -->
-            <tr>
-                <td class="rounded border-2 border-amber-300 p-5 text-xl">Limited</td>
-                <td class="rounded border-2 border-amber-300 p-5 text-xl">$45</td>
-                <td class="rounded border-2 border-amber-300 p-5 text-xl">$9</td>
-                <td class="rounded border-2 border-amber-300 p-5">5 days in advance</td>
-                <td class="rounded border-2 border-amber-300 text-lg text-red-600 p-3">✘</td>
-            </tr>
-            <!-- Standard -->
-            <tr>
-                <td class="rounded border-2 border-sky-500 p-5 text-xl">Standard</td>
-                <td class="rounded border-2 border-sky-500 p-5 text-xl">$125</td>
-                <td class="rounded border-2 border-sky-500 p-5 text-xl">$8</td>
-                <td class="rounded border-2 border-sky-500 p-5">2 weeks in advance</td>
-                <td class="rounded border-2 border-sky-500 text-xl text-green-600 p-3">✓</td>
-            </tr>
-            <!-- VIP -->
-            <tr>
-                <td class="rounded border-2 border-violet-600 p-5 text-xl">VIP</td>
-                <td class="rounded border-2 border-violet-600 p-5 text-xl">$195</td>
-                <td class="rounded border-2 border-violet-600 p-5 text-xl">$7</td>
-                <td class="rounded border-2 border-violet-600 p-5">6 months in advance</td>
-                <td class="rounded border-2 border-violet-600 text-xl text-green-600 p-3">✓</td>
-            </tr>
-        </tbody>
-    </table>
+<div id="memberships" class="container mx-auto px-2 sm:px-6 lg:px-8">
+    <article class="grid grid-cols-4 gap-y-5 mb-10 max-lg:hidden">
+        <h2 class="col-span-4 flex text-4xl font-header">Annual Memberships</h2>
+        <table class="col-span-3 border-separate border-spacing-2">
+            <!-- Headers -->
+            <thead>
+                <tr>
+                    <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Membership tier</th>
+                    <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Price/year</th>
+                    <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Open play/hour</th>
+                    <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Court booking</th>
+                    <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">
+                        Early tournament and special event access
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Limited -->
+                <tr>
+                    <td class="rounded border-2 border-amber-300 p-5 text-xl">Limited</td>
+                    <td class="rounded border-2 border-amber-300 p-5 text-xl">$45</td>
+                    <td class="rounded border-2 border-amber-300 p-5 text-xl">$9</td>
+                    <td class="rounded border-2 border-amber-300 p-5">5 days in advance</td>
+                    <td class="rounded border-2 border-amber-300 text-lg text-red-600 p-3">✘</td>
+                </tr>
+                <!-- Standard -->
+                <tr>
+                    <td class="rounded border-2 border-sky-500 p-5 text-xl">Standard</td>
+                    <td class="rounded border-2 border-sky-500 p-5 text-xl">$125</td>
+                    <td class="rounded border-2 border-sky-500 p-5 text-xl">$8</td>
+                    <td class="rounded border-2 border-sky-500 p-5">2 weeks in advance</td>
+                    <td class="rounded border-2 border-sky-500 text-xl text-green-600 p-3">✓</td>
+                </tr>
+                <!-- VIP -->
+                <tr>
+                    <td class="rounded border-2 border-violet-600 p-5 text-xl">VIP</td>
+                    <td class="rounded border-2 border-violet-600 p-5 text-xl">$195</td>
+                    <td class="rounded border-2 border-violet-600 p-5 text-xl">$7</td>
+                    <td class="rounded border-2 border-violet-600 p-5">6 months in advance</td>
+                    <td class="rounded border-2 border-violet-600 text-xl text-green-600 p-3">✓</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <div class="relative m-2">
-        <div class="absolute bg-dotted w-2/3 h-2/3 top-0 right-0"></div>
-        <div class="absolute rounded bg-dinks-blue w-5/6 h-4/5 bottom-0 left-0 shadow-xl p-6">
-            <div class="flex flex-col h-full justify-between">
-                <strong class="text-xl">All tiers include:</strong>
-                Personalized door access upon signing up for open play or booking a
-                court
-                <button class="bg-dinks-red hover:bg-dinks-red-dark rounded py-2" (click)="toggleModal()">
-                    Sign me up!
-                </button>
+        <div class="relative m-2">
+            <div class="absolute bg-dotted w-2/3 h-2/3 top-0 right-0"></div>
+            <div class="absolute rounded bg-dinks-blue w-5/6 h-4/5 bottom-0 left-0 shadow-xl p-6">
+                <div class="flex flex-col h-full justify-between">
+                    <strong class="text-xl">All tiers include:</strong>
+                    Personalized door access upon signing up for open play or booking a
+                    court
+                    <button class="bg-dinks-red hover:bg-dinks-red-dark rounded py-2" (click)="toggleModal()">
+                        Sign me up!
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
-</article>
+    </article>
+</div>
+
 
 <!-- Memberships mobile -->
-<article class="mb-10 lg:hidden">
-    <h2 class="text-4xl mb-5 text-center font-header">Annual Memberships</h2>
-    <!-- Limited -->
-    <div class="rounded border-2 border-amber-300 p-5 mb-5 shadow-xl">
-        <div class="mb-2 flex justify-between" (click)="toggleLimited()">
-            <strong class="text-amber-300 text-3xl">Limited</strong>
-            <svg [class.rotate-180]="limited" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
-                width="24px" fill="#e8eaed">
-                <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
-            </svg>
+<div id="memberships-mobile" class="container mx-auto px-2 sm:px-6 lg:hidden">
+    <article class="mb-10 lg:hidden">
+        <h2 class="text-4xl mb-5 text-center font-header">Annual Memberships</h2>
+        <!-- Limited -->
+        <div class="rounded border-2 border-amber-300 p-5 mb-5 shadow-xl">
+            <div class="mb-2 flex justify-between" (click)="toggleLimited()">
+                <strong class="text-amber-300 text-3xl">Limited</strong>
+                <svg [class.rotate-180]="limited" xmlns="http://www.w3.org/2000/svg" height="24px"
+                    viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
+                    <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
+                </svg>
+            </div>
+            <ul class="list-disc ml-5 mb-3" [hidden]="!limited">
+                <li>Ability to book 5 days in advance</li>
+                <li>Weekday Open Play $9/session</li>
+            </ul>
+            <span class="flex">
+                <p class="text-2xl">$45</p>
+                <p class="text-sm mt-3 ml-1">/year</p>
+            </span>
         </div>
-        <ul class="list-disc ml-5 mb-3" [hidden]="!limited">
-            <li>Ability to book 5 days in advance</li>
-            <li>Weekday Open Play $9/session</li>
-        </ul>
-        <span class="flex">
-            <p class="text-2xl">$45</p>
-            <p class="text-sm mt-3 ml-1">/year</p>
-        </span>
-    </div>
 
-    <!-- Standard -->
-    <div class="rounded border-2 border-sky-500 p-5 mb-5 shadow-xl">
-        <div class="mb-2 flex justify-between" (click)="toggleStandard()">
-            <strong class="text-sky-500 text-3xl">Standard</strong>
-            <svg [class.rotate-180]="standard" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
-                width="24px" fill="#e8eaed">
-                <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
-            </svg>
+        <!-- Standard -->
+        <div class="rounded border-2 border-sky-500 p-5 mb-5 shadow-xl">
+            <div class="mb-2 flex justify-between" (click)="toggleStandard()">
+                <strong class="text-sky-500 text-3xl">Standard</strong>
+                <svg [class.rotate-180]="standard" xmlns="http://www.w3.org/2000/svg" height="24px"
+                    viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
+                    <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
+                </svg>
+            </div>
+            <ul class="list-disc ml-5 mb-3" [hidden]="!standard">
+                <li>Ability to book 2 weeks in advance</li>
+                <li>Weekday Open Play $8/session</li>
+                <li>Early access to tournaments & special events</li>
+            </ul>
+            <span class="flex">
+                <p class="text-2xl">$125</p>
+                <p class="text-sm mt-3 ml-1">/year</p>
+            </span>
         </div>
-        <ul class="list-disc ml-5 mb-3" [hidden]="!standard">
-            <li>Ability to book 2 weeks in advance</li>
-            <li>Weekday Open Play $8/session</li>
-            <li>Early access to tournaments & special events</li>
-        </ul>
-        <span class="flex">
-            <p class="text-2xl">$125</p>
-            <p class="text-sm mt-3 ml-1">/year</p>
-        </span>
-    </div>
 
-    <!-- VIP -->
-    <div class="rounded border-2 border-violet-600 p-5 mb-10 shadow-xl">
-        <div class="mb-2 flex justify-between" (click)="toggleVIP()">
-            <strong class="text-violet-600 text-3xl">VIP</strong>
-            <svg [class.rotate-180]="vip" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
-                width="24px" fill="#e8eaed">
-                <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
-            </svg>
+        <!-- VIP -->
+        <div class="rounded border-2 border-violet-600 p-5 mb-10 shadow-xl">
+            <div class="mb-2 flex justify-between" (click)="toggleVIP()">
+                <strong class="text-violet-600 text-3xl">VIP</strong>
+                <svg [class.rotate-180]="vip" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+                    width="24px" fill="#e8eaed">
+                    <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
+                </svg>
+            </div>
+            <ul class="list-disc ml-5 mb-3" [hidden]="!vip">
+                <li>Ability to book 6 months in advance</li>
+                <li>Weekday Open Play $7/session</li>
+                <li>Early access to tournaments & special events</li>
+            </ul>
+            <span class="flex">
+                <p class="text-2xl">$195</p>
+                <p class="text-sm mt-3 ml-1">/year</p>
+            </span>
         </div>
-        <ul class="list-disc ml-5 mb-3" [hidden]="!vip">
-            <li>Ability to book 6 months in advance</li>
-            <li>Weekday Open Play $7/session</li>
-            <li>Early access to tournaments & special events</li>
-        </ul>
-        <span class="flex">
-            <p class="text-2xl">$195</p>
-            <p class="text-sm mt-3 ml-1">/year</p>
-        </span>
-    </div>
 
-    <div class="relative m-5 h-48">
-        <div class="absolute bg-dotted w-full h-full rotate-2">
-        </div>
-        <div
-            class="absolute rounded bg-dinks-blue w-11/12 h-5/6 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 shadow-xl p-6">
-            <div class="flex flex-col h-full justify-between">
-                <strong class="text-xl">All tiers include:</strong>
-                Personalized door access upon signing up for open play or booking a
-                court
-                <button class="bg-dinks-red hover:bg-dinks-red-dark rounded py-2" (click)="toggleModal()">
-                    Sign me up!
-                </button>
+        <div class="relative m-5 h-48">
+            <div class="absolute bg-dotted w-full h-full rotate-2">
+            </div>
+            <div
+                class="absolute rounded bg-dinks-blue w-11/12 h-5/6 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 shadow-xl p-6">
+                <div class="flex flex-col h-full justify-between">
+                    <strong class="text-xl">All tiers include:</strong>
+                    Personalized door access upon signing up for open play or booking a
+                    court
+                    <button class="bg-dinks-red hover:bg-dinks-red-dark rounded py-2" (click)="toggleModal()">
+                        Sign me up!
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
-</article>
+    </article>
+</div>
+
 
 @if (showModal) {
 <article>
