--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,13 +77,13 @@
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex flex-shrink-0 items-center">
             <a routerLink="home" class="hover:cursor-pointer hover:opacity-90">
-              <img class="h-8 w-auto" src="logos/combinedIconHorizontal.png" alt="Your Company">
+              <img class="h-10 w-auto" src="logos/combinedIconHorizontal.png" alt="Your Company">
             </a>
           </div>
           <div class="hidden sm:ml-6 sm:block">
             <div class="flex space-x-4">
               <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-              <a routerLink="home"
+              <!-- <a routerLink="home"
                 class="no-underline rounded-md px-3 py-2 text-sm font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
                 routerLinkActive="bg-blue-700 active-link">Home</a>
               <a routerLink="leagues-tournaments"
@@ -95,23 +95,41 @@
               <a routerLink="about"
                 class="no-underline rounded-md px-3 py-2 text-sm font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
                 routerLinkActive="bg-blue-700 active-link">About
-                Us</a>
+                Us</a> -->
             </div>
           </div>
         </div>
         <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
           <div class="flex space-x-4">
-            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+            <a routerLink="home"
+              class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900  hover:border-blue-900 hover:text-white visited:text-gray-900"
+              routerLinkActive="bg-blue-700 border-blue-700 active-link">Home</a>
+            <a routerLink="rates-memberships"
+              class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900  hover:border-blue-900 hover:text-white visited:text-gray-900"
+              routerLinkActive="bg-blue-700 border-blue-700 active-link">Rates</a>
+            <a routerLink="leagues-tournaments"
+              class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
+              routerLinkActive="bg-blue-700 border-blue-700 active-link">Leagues/Tournaments</a>
+            <a routerLink="instruction"
+              class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
+              routerLinkActive="bg-blue-700 border-blue-700 active-link">Instruction</a>
+            <a routerLink="about"
+              class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
+              routerLinkActive="bg-blue-700 border-blue-700 active-link">About
+              Us</a>
+
+            <!-- <div class="h-6 w-2px bg-gray-900"></div> -->
+
             <a href="https://maps.app.goo.gl/pfU4YHvtoYF1QonE9" target="_blank"
-              class="no-underline rounded-md px-3 py-2 text-sm font-medium text-gray-900 hover:bg-green-600 hover:text-white visited:text-gray-900">
-              <i class="material-icons align-middle inline-block mr-1">map</i>
-              3800 Merle Hay Rd Suite 1000
+              class="no-underline rounded-md px-3 py-2 text-sm font-medium text-gray-900 hover:text-gray-500 visited:text-gray-900">
+              <i class="material-icons align-middle inline-block mr-1">place</i>
+              <!-- 3800 Merle Hay Rd Suite 1000 -->
             </a>
 
             <a routerLink="reserve"
               class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 border-red-500 hover:border-red-700 text-red-500 hover:text-red-700 visited:text-red-700"
               routerLinkActive=" border-red-700 bg-red-700 active-link">Reserve
-              a count</a>
+              a court</a>
           </div>
         </div>
       </div>
@@ -186,6 +204,7 @@
 </header>
 
 <main class="mb-52">
+  <h1>&nbsp;</h1>
   <router-outlet></router-outlet>
 </main>
 
