--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="absolute inset-0 bg-black opacity-75"></div>
     <div class="relative z-10 flex items-center justify-center h-full">
         <div class="text-center text-white">
-            <h1 class="text-4xl md:text-6xl font-bold mb-4 mt-28">Welcome to Your New Pickleball Venue</h1>
+            <h1 class="text-4xl md:text-6xl font-bold mb-4 mt-48 sm:mt-28">Welcome to Your New Pickleball Venue</h1>
             <p class="text-lg md:text-2xl mb-8">The largest dedicated indoor pickleball venue in central Iowa.</p>
 
             <div class="mt-10 flex items-center justify-center gap-x-6">
